cmd/host-profiler/deploy/standalone/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dd-host-profiler
  namespace: dd-host-profiler
specs:
- description: Egress DNS
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: host-profiler-collector
  egress:
  - toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
- description: Egress to Datadog intake
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: host-profiler-collector
  egress:
  - toFQDNs:
    - matchPattern: "**.datadoghq.com"
    - matchPattern: "**.datadoghq.eu"
    - matchPattern: "**.ddog-gov.com"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
- description: Egress to kubelet API
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: host-profiler-collector
  egress:
  - toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
- description: Egress to Kubernetes API server
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: host-profiler-collector
  egress:
  - toEntities:
    - kube-apiserver
