cmd/host-profiler/deploy/standalone/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dd-host-profiler
  namespace: dd-host-profiler
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: host-profiler-collector
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 443
          protocol: TCP
    - ports:
        - port: 10250
          protocol: TCP
